# roc

crates/ast/: Cargo.toml
crates/ast/src/: constrain.rs
crates/cli/: Cargo.toml
crates/compiler/can/src/: annotation.rs  copy.rs  def.rs  desugar.rs  expr.rs  module.rs  pattern.rs  traverse.rs
crates/compiler/constrain/src/: expr.rs  pattern.rs
crates/compiler/cypress/: Cargo.toml
crates/compiler/cypress/benches/: bench_parse.rs
crates/compiler/cypress/src/: canfmt.rs  fmt.rs  lib.rs  oldast.rs  parse.rs  token.rs  tree.rs  validate.rs
crates/compiler/cypress/tests/: test_parse.rs
crates/compiler/fmt/src/: annotation.rs  def.rs  expr.rs  node.rs  spaces.rs
crates/compiler/module/src/: ident.rs
crates/compiler/mono/src/: decision_tree.rs  ir.rs  layout.rs
crates/compiler/parse/: Cargo.toml  super-long-parse.expr.roc
crates/compiler/parse/src/: ast.rs  cypress.rs  cypress_token.rs  expr.rs  lib.rs  normalize.rs  parser.rs  token.rs  tree.rs
crates/compiler/problem/src/: can.rs
crates/compiler/syntax_gen/: Cargo.toml  Roc.syntax  Syntax.syntax
crates/compiler/syntax_gen/src/: ast.rs  generate.rs  ir.rs  libparser.rs  main.rs  parser.rs  rust.rs
crates/compiler/test_gen/: Cargo.toml
crates/compiler/test_gen/src/: gen_tuples.rs  tests.rs
crates/compiler/test_syntax/src/: test_helpers.rs
crates/compiler/test_syntax/tests/: test_fmt.rs  test_snapshots.rs
crates/compiler/types/src/: types.rs
crates/docs_cli/: Cargo.toml
crates/editor/: Cargo.toml
crates/linker/: Cargo.toml
crates/repl_expect/: Cargo.toml
(+795 files in other folders)
